basic idea update ch5
brrrroem

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{A case competition typology}\label{ch:case-competition-typology}
+\chapter{A typology}\label{ch:case-competition-typology}
 
 In Part \ref{part:case-facts} of this dissertation, I discussed a first aspect of case competition in headless relatives. There is a fixed scale that determines which case wins the case competition. This is the same case scale crosslinguistically. I repeat the case scale from Chapter \ref{ch:recurring} in \ref{ex:case-scale-two-patterns}.
 
