--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -645,3 +645,11 @@
   year={2011},
   publisher={John Benjamins Publishing}
 }
+
+@book{braune2018,
+  title={Althochdeutsche Grammatik I},
+  author={Braune, Wilhelm},
+  year={2018},
+  publisher={Walter de Gruyter GmbH \& Co KG},
+  doi={10.1515/9783110515114}
+}
