--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -28,7 +28,8 @@ The relative pronoun \tit{sa} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the 
 \ac{comp} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} -\ac{comp} \ac{dem}.\ac{sg}.\ac{m}.\ac{gen} eat.\ac{opt}.3\ac{sg}\scsub{[nom]} not die.\ac{opt}.3\ac{sg}\scsub{[nom]}\\
 `that the one, who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothic-nom-nom}
 
-Consider the example in \ref{ex:gothic-acc-acc-rep}, in which the internal accusative case competes against the external accusative case.
+Consider the example in \ref{ex:gothic-acc-acc-rep}, repeated from the introduction. In this example, the internal accusative case competes against the external accusative case.
+
 The internal case is accusative, as the predicate \tit{arman} `to pity' takes accusative objects.
 The external case is accusative as well, as the predicate \tit{ga-arman} `to pity' also takes accusative objects.
 The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal and external case: the accusative.
