--- a/thesis.tex
+++ b/thesis.tex
@@ -73,12 +73,12 @@ thanks
 
 \include{introduction}
 
-\part{The case facts}\label{part:case-facts}
-\include{recurring-pattern}
-\include{case-decomposition}
+\part{The case}\label{part:case-facts}
+% \include{recurring-pattern}
+% \include{case-decomposition}
 
-\part{Internal and external}\label{part:variation}
-\include{case-competition-typology}
+\part{The base}\label{part:variation}
+% \include{case-competition-typology}
 \include{committee}
 
 \bookmarksetup{startatroot}
