--- a/committee.tex
+++ b/committee.tex
@@ -1,23 +1,25 @@
 % !TEX root = thesis.tex
 
-\chapter{The committee}\label{ch:relativization}
+\chapter{Base comparison}\label{ch:relativization}
 
-In Chapter \ref{ch:case-competition-typology} I introduced two parameters that generates the attested languages, as shown in Table \ref{fig:two-parameters}. The first parameter is `allow mismatches?', which distinguishes between `matching' languages, as Polish, on the one hand, and `non-matching --- internal only' and `non-matching' languages as Modern German and Old High German. The second parameter is `cases considered', which distinguishes between `non-matching --- internal only' languages, as Modern German, on the one hand, and `non-matching' languages, as Old High German.
+In Chapter \ref{ch:case-competition-typology} I introduced two descriptive parameters that generate the attested languages, as shown in Figure \ref{fig:two-parameters}.
+The first parameter concerns whether the external case is allowed to surface when it wins the case competition (allow \tsc{ext}?). This parameter distinguishes between non-matching languages (e.g. Old High German) on the one hand and internal-only languages (e.g. Modern German) and matching languages (e.g. Polish) on the other hand.
+The second parameter concerns whether the internal case is allowed to surface when it wins the case competition (allow \tsc{int?}). This parameter distinguishes between internal-only languages (e.g. as Modern German) on the one hand and non-matching languages (e.g. Polish) on the other hand.
 
 \begin{figure}[H]
   \centering
     \footnotesize{
     \begin{tikzpicture}[node distance=1.5cm]
       \node (question2) [question]
-      {allow \tsc{int} + \tsc{ext}?};
+      {allow \tsc{ext}?};
           \node (outcome2) [outcome, below of=question2, xshift=-1.5cm]
-          {complex};
+          {non-matching};
               \node (example2) [example, below of=outcome2, yshift=0.25cm]
               {\scriptsize{e.g. Gothic, Old High German, Classical Greek}};
           \node (question3) [question, below of=question2, xshift=2cm, yshift=-0.5cm]
           {allow \tsc{int}?};
               \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
-              {\ac{int} + complex};
+              {internal-only};
                   \node (example3) [example, below of=outcome3, yshift=0.25cm]
                   {\scriptsize{e.g. Modern German\\\phantom{x}}};
               \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
@@ -29,106 +31,94 @@ In Chapter \ref{ch:case-competition-typology} I introduced two parameters that g
     \draw [arrow] (question2) -- node[anchor=west] {no} (question3);
     \draw [arrow] (question3) -- node[anchor=east] {yes} (outcome3);
     \draw [arrow] (question3) -- node[anchor=west] {no} (outcome4);
-
-    % \node[fit=(question3)(outcome3)(outcome4)(example3)(example4),
-    %       draw, circle, scale=0.7]
-    %       {};
     \end{tikzpicture}
     }
-    \caption{Attested patterns in headless relatives with case competition (repeated)}
+    \caption{Two descriptive parameters generate three language types}
     \label{fig:two-parameters}
 \end{figure}
 
-This chapter gives the linguistic counterparts of these parameters.
-The linguistic counterpart of `allow mismatches' is: ???
-The linguistic counterpart of `cases considered' is: if \tsc{dem} and \tsc{rel} are syncretic, you consider \tsc{int} and \tsc{ext}. If not, you consider only \tsc{int}.
+The goal of this chapter is to give the theoretical counterparts of these descriptive parameters. Goal, not language-specific, but something that can be observed independently.
 
-\begin{figure}[H]
-  \centering
-    \footnotesize{
-    \begin{tikzpicture}[node distance=1.5cm]
-      \node (question2) [question]
-      {\tsc{rel} = \tsc{dem}?};
-          \node (outcome2) [outcome, below of=question2, xshift=-1.5cm]
-          {complex};
-              \node (example2) [example, below of=outcome2, yshift=0.25cm]
-              {\scriptsize{e.g. Gothic, Old High German, Classical Greek}};
-          \node (question3) [question, below of=question2, xshift=2cm, yshift=-0.5cm]
-          {\tsc{dem}\scsub{weak} = ok as head?};
-              \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
-              {\ac{int} + complex};
-                  \node (example3) [example, below of=outcome3, yshift=0.25cm]
-                  {\scriptsize{e.g. Modern German\\\phantom{x}}};
-              \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
-              {matching};
-                  \node (example4) [example, below of=outcome4, yshift=0.25cm]
-                  {\scriptsize{e.g. Polish\\\phantom{x}}};
+This chapter is structured as follows.
 
-    \draw [arrow] (question2) -- node[anchor=east] {yes} (outcome2);
-    \draw [arrow] (question2) -- node[anchor=west] {no} (question3);
-    \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
-    \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
 
-    % \node[fit=(question3)(outcome3)(outcome4)(example3)(example4),
-    %       draw, circle, scale=0.7]
-    %       {};
-    \end{tikzpicture}
-    }
-    \caption{Attested patterns in headless relatives with case competition (repeated)}
-    \label{fig:formal-parameters}
-\end{figure}
+\section{The basic idea}
 
+The goal of this chapter is to explain why languages differ in whether they allow the internal case and the external case to surface when either of them wins the case competition. In other words, the chapter gives the theoretical counterparts of the descriptive parameters given in Figure \ref{fig:two-parameters}. Before I can describe these theoretical counterparts, I need to introduce some concepts: the internal element, the external element and the base of these elements.
+
+I start with the internal and external element. In the thesis so far, I stated that the relative pronoun appears in the case that wins the case competition. I have not been explicit about where the case competition takes place. In order to avoid introducing theoretical machinery just for case competition situations, I assume it takes place in syntax. I propose that at some point in the derivation headless relatives have an internal and an external element.\footnote{
+I am far from the only one that assumes this. Himmelreich, Hanink, but also Bresnan/Grimshaw, Groos/Riemsdijk, Harbert..
+} The internal element bears the internal case, and the external element bears the external case. At the end of the derivation, the element bearing the more complex case surfaces as the relative pronoun, if it is allowed to.
+
+Now I turn to the so-called base of the internal and external element. The internal and the external element do not only consist of case features. They also contain other features. These other features have to do with referentiality, number, gender, uniqueness and definiteness. I call the part of the internal and external element that corresponds to these features the base part. I refer to the part that corresponds to the case features as the case part.
+
+Table \ref{tbl:component-elements} summarizes what I just laid out. At some point in the derivation, headless relatives contain an internal and an external element. The internal element consists of an internal base part and an internal case part. The external element also consists of an external base part and an external case part. The internal and the external base are the main focus of this chapter.
 
 \begin{table}[H]
   \center
-  \caption{Overview of languages}
-\begin{tabular}{c|ccc}
+  \caption{Components of the internal and external element}
+\begin{tabular}{cccc}
   \toprule
-                      & Old High German & Modern German & Polish  \\
-                      \cmidrule{1-4}
-\tsc{int} = \tsc{ext} & ✔               & ✔             & ✔       \\
-\tsc{int} > \tsc{ext} & ✔               & ✔             & *       \\
-\tsc{int} < \t{ext} & ✔               & *             & *       \\
+\multicolumn{2}{c}{\tsc{int} element}  & \multicolumn{2}{c}{\tsc{ext} element} \\
+\cmidrule(lr){1-2}                        \cmidrule(lr){3-4}
+base\scsub{int} & case\scsub{int}       & base\scsub{ext} & case\scsub{ext}     \\
 \bottomrule
 \end{tabular}
+\label{tbl:component-elements}
 \end{table}
 
-So far, I have discussed three different concepts: the internal case, the external case and the relative pronoun. I said things like ``the relative pronoun is allowed to surface in the internal or in the external case''. I have not been explicit about where and how the competition between the internal and the external case takes place. In order to avoid introducing machinery just for case competition situations, I assume it takes place in syntax. I propose that headless relatives actually have an internal element and an external element at some point of the derivation. At the end of the derivation, only one of them surfaces as the relative pronoun.
+To make this concrete, consider the example in \ref{ex:ohg-nom-nom-rep}, repeated from Chapter \ref{ch:case-competition-typology}. In this example, the internal nominative case competes against the external nominative case. The relative pronoun surfaces in the nominative case.
 
-Section \ref{sec:int-ext-elements} discusses the internal and external case into detail. It shows syntactic evidence for the relative being the internal element. I argue that the external element is syntactically placed outside the relative clause. Independent evidence for the presence of this external element comes from double-headed languages. I also adopt another crucial property of the external heads in these double-headed relative clauses: the external head is always a subset of the internal head. This observation ultimately leads me to be able to exclude the `non-matching --- external-only' language type.
+\exg. quham dher chisendit scolda uuerdhan\\
+ come.\ac{pst}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} send.\ac{pst}.\ac{ptcp}\scsub{[nom]} should.\ac{pst}.3\ac{sg} become.\ac{inf}\\
+ `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom-rep}
 
-However, before I go into detail about the specifics of the internal and the external element, I discuss in Section \ref{sec:containment-noncase} how the introduction of an internal and an external element helps to account for the difference between languages. I propose that both elements consists of part that concerns case, a case part, and a part that concerns other features than case, a base part. The latter parts, the base parts, are crucial in determining how the language behaves with the respect to the two parameters. Specifically, the comparison between the base part of the internal element and the base part of the external element decides whether the internal and elements are allowed to surface. Just as I did for the competition between case features, I rely on containment. When the internal base part contains the features that the external base part contains, the internal element is allowed to surface. When the external base part contains the features that the internal base part contains, the external element is allowed to surface.
-
-In Section \ref{sec:deriving-languages}, I give per language (Old High German, Modern German and Polish) the internal structure of the internal element and the external element. I compare them to each other and show how the grammatical patterns are generated and the ungrammatical ones are not.
-
-In Section \ref{sec:alternative-analyses}, I compare my approach with previous accounts of \citet{himmelreich2017} and Grosu.
-
-
-
-
-
-
-\section{Base containment}\label{sec:containment-noncase}
-
-The goal is to explain why there are languages that allow internal and external, languages that allow only internal, but no languages that only allow only external. I propose we do this by comparing the base parts of the internal and the external elements in headless relatives.
-
-Headless relatives have an internal element and an external element. Both elements consist of two parts: the case part and a base part. Part \ref{part:case-facts} was about the case part of the elements. A more complex case wins over a less complex case because the former contains all features the latter contains. Concretely, the dative wins over the accusative because the dative contains all features the accusative contains, the dative wins over the nominative because the dative contains all features the nominative contains, and the accusative wins over the nominative because the accusative contains all features the nominative contains.
-
-I propose that a containment relation is also the crucial factor that determines in whether a particular language allows the internal and external case to surface. It is not the containment relationship having to do with case, but the one that has to do with the base part. I propose that a language allows the internal case to surface when it wins the case competition, if the base part of the internal element contains all features that the base part of the external element contains. The other way around works the same way: a language allows the external case to surface when it wins the case competition, if the base part of the external element contains all features that the base part of the internal element contains.
+The relative pronoun in this sentence is \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}'. In my proposal, the internal element for this sentence is \tit{dher} and the external element is \tit{dher} too. The base part of \tit{dher} is the morpheme \tit{dhe}, and the case part of \tit{dher} is the morpheme \tit{r}. This is schematically shown in Table \ref{tbl:component-dhen}.
+In Section \ref{sec:deriving-non-matching} I motivate the featural content and phonological form of the internal and external element.\footnote{
+This is a simplification of the reality. The morpheme \tit{r} realizes besides case features also non-case features, such as gender and number. This simplification can be made, because the non-case features that are present in the internal element are also present in the external element.
+}
 
 \begin{table}[H]
   \center
-  \caption{Old High German}
-\begin{tabular}{c|ccc}
+  \caption{The internal and external element of \ref{ex:ohg-nom-nom-rep}}
+\begin{tabular}{cccc}
   \toprule
-                      & \tsc{int}         & \tsc{ext}         & ✔/* \\
-                      \cmidrule{1-4}
-\tsc{int} = \tsc{ext} & \tbf{d}-\tbf{e}-r & \tbf{d}-\tbf{e}-r & ✔   \\
-\tsc{int} > \tsc{ext} & \tbf{d}-\tbf{e}-n & \tbf{d}-\tbf{e}-r & ✔   \\
-\tsc{int} < \tsc{ext} & \tbf{d}-\tbf{e}-r & \tbf{d}-\tbf{e}-n & ✔   \\
+\multicolumn{2}{c}{\tsc{int} element}  & \multicolumn{2}{c}{\tsc{ext} element} \\
+\cmidrule(lr){1-2}                        \cmidrule(lr){3-4}
+base\scsub{int} & case\scsub{int}       & base\scsub{ext} & case\scsub{ext}     \\
+\cmidrule(lr){1-1}  \cmidrule(lr){2-2}    \cmidrule(lr){3-3}  \cmidrule(lr){4-4}
+dhe & r                                 & dhe & r                               \\
 \bottomrule
 \end{tabular}
+\label{tbl:component-dhen}
 \end{table}
+
+Now I have introduced the concepts internal and external element and their bases, I turn to the basic idea behind my proposal. The goal is to give a theoretical explanation for why a language allows the internal or external case to surface when it wins the case competition or why it does not. I propose that this follows from the comparison between the internal and external base within a language.
+In the comparison, I rely on containment, just as I did in Chapter \ref{ch:decomposition} when comparing cases. I went with the following reasoning. A more complex case wins over a less complex case because the former contains all features that the latter contains. Concretely, the dative wins over the accusative because the dative contains all features that the accusative contains, the dative wins over the nominative because the dative contains all features that the nominative contains, and the accusative wins over the nominative because the accusative contains all features that the nominative contains.
+I apply the same reasoning in comparing the internal and external base. When the internal base contains the features that the external base contains, the internal element is allowed to surface. When the external base contains the features that the internal base contains, the external element is allowed to surface.
+
+Consider Old High German. First there is a tie, \tsc{int} = \tsc{ext}, and everything is grammatical.
+If \tsc{int} > \tsc{ext}, we have a competition and a winner: internal \tsc{acc}. The bases are compared. (How to get from forms to features?) They are identical, so the internal base contains all features the external base contains.
+If \tsc{int} > \tsc{ext}, we have a competition and a winner: external \tsc{acc}. The bases are compared. They are identical, so the external base contains all features the internal base contains.
+
+\begin{table}[H]
+  \center
+  \caption{Base comparison in Old High German}
+\begin{tabular}{ccccc}
+  \toprule
+                      & \multicolumn{2}{c}{\tsc{int} element}  & \multicolumn{2}{c}{\tsc{ext} element} \\
+                        \cmidrule(lr){2-3}                        \cmidrule(lr){4-5}
+                      & base\scsub{int} & case\scsub{int}       & base\scsub{ext} & case\scsub{ext}     \\
+                        \cmidrule(lr){2-2}    \cmidrule(lr){3-3}  \cmidrule(lr){4-4} \cmidrule(lr){5-5}
+\tsc{int} = \tsc{ext} & dhe & r                                 & dhe & r                               \\
+\tsc{int} > \tsc{ext} & dhe & n                                 & dhe & r                               \\
+\tsc{int} < \tsc{ext} & dhe & r                                 & dhe & n                               \\
+\bottomrule
+\end{tabular}
+\label{tbl:component-dhen}
+\end{table}
+
+
 
 \begin{table}[H]
   \center
@@ -159,57 +149,62 @@ I propose that a containment relation is also the crucial factor that determines
 \end{tabular}
 \end{table}
 
-Table \ref{tbl:base} gives a table that resembles the case tables I discussed in Chapter \ref{ch:case-competition-typology}. The left column shows the features of the internal base part. The top row shows the features of the internal base part. The other cells indicate the features of the winning base part.
-If the internal base part contains the features [\tsc{a}] or [\tsc{a}, \tsc{b}], and the external base part contains only the features [\tsc{a}] or [\tsc{a}, \tsc{b}], the internal and the external are allowed to surface in the language. This is the pattern that corresponds to the `non-matching' type of language like Old High German.
-If the internal base part contains the feature [\tsc{a}], and the external base part contains only the features [\tsc{a}, \tsc{b}], the external is allowed to surface in the language and the internal is not. This is the pattern that is crosslinguistically not attested. In Section \ref{sec:int-ext-elements} I show why this is the case.
-If the internal base part contains the features [\tsc{a}, \tsc{b}], and the external base part contains only the feature [\tsc{a}], the internal is allowed to surface in the language and the external is not. This is the pattern that corresponds to the `non-matching --- internal only' type of language like Modern German.
 
-\begin{table}[H]
-  \center
-  \caption{Relative pronoun in external case}
-  \begin{tabular}{c|c|c}
-    \toprule
-   \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
-          & \tsc{a}
-          & \tsc{a},\tsc{b}
-          \\ \cmidrule{1-3}
-      \tsc{a}
-          & \tsc{a}
-          & \tsc{a},\tsc{b}
-          \\ \cmidrule{1-3}
-      \tsc{a},\tsc{b}
-          & \tsc{a}
-          & \tsc{a},\tsc{b}
-          \\
-    \bottomrule
-  \end{tabular}
-  \label{tbl:base}
-\end{table}
-
-There is a crucial difference between the Table \ref{tbl:base} and the case tables in Chapter \ref{ch:case-competition-typology}. The case tables described different situations that are attested within a single language, as I illustrated by going through  examples that correspond to different cells in the tables. Case differs from sentence to sentence: in one sentence the internal case is the dative, in the other it is the accusative or the nominative. The base table is not like that: only a single cell in the table corresponds to a particular language. The base parts of the internal and external elements are namely stable per language. The relative pronoun has namely a single form, and so does the external element.
+Case differs from sentence to sentence: in one sentence the internal case is the dative, in the other it is the accusative or the nominative. The base table is not like that: only a single cell in the table corresponds to a particular language.
 
 Taking this all together, there are two competitions taking place in headless relatives: case competition and base competition. Case competition decides which case wins the sentence and base competition decides whether the result can go through. Let me put this in the metaphor with the committee I introduced in Section \ref{sec:possible-patterns}. The committee learns who wins the case competition. It can either approve this case or not approve it. The information that the committee uses for their decision is the comparison between the internal and the external element. More specifically, it compares the base parts of the internal and external element. The committee approves the winning case if the base part of its element contains the base part of the element of the losing case.
 
 In sum, a relative pronoun can surface in the internal case if both the base and the case part of the internal element contain base and case part of the external element. It works the same way the other way around: a relative pronoun can surface in the external case if both the base and the case part of the external element contain the base and case part of the internal element.
 
-In this chapter, I introduce what the base part the internal and external element looks like, and I argue per language what they look like.
+
+
+The linguistic counterpart of `allow \tsc{ext}?' is whether the internal base and the external base are syncretic (base\scsub{int} = base\scsub{ext}?).
+The linguistic counterpart of `allow \tsc{int}?' is whether the external base is a clitic (base\scsub{ext} = clitic?).
+
+\begin{figure}[H]
+  \centering
+    \footnotesize{
+    \begin{tikzpicture}[node distance=1.5cm]
+      \node (question2) [question]
+      {base\scsub{int} = base\scsub{ext}?};
+          \node (outcome2) [outcome, below of=question2, xshift=-1.5cm]
+          {complex};
+              \node (example2) [example, below of=outcome2, yshift=0.25cm]
+              {\scriptsize{e.g. Gothic, Old High German, Classical Greek}};
+          \node (question3) [question, below of=question2, xshift=2cm, yshift=-0.5cm]
+          {base\scsub{ext} = clitic?};
+              \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
+              {\ac{int} + complex};
+                  \node (example3) [example, below of=outcome3, yshift=0.25cm]
+                  {\scriptsize{e.g. Modern German\\\phantom{x}}};
+              \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
+              {matching};
+                  \node (example4) [example, below of=outcome4, yshift=0.25cm]
+                  {\scriptsize{e.g. Polish\\\phantom{x}}};
+
+    \draw [arrow] (question2) -- node[anchor=east] {yes} (outcome2);
+    \draw [arrow] (question2) -- node[anchor=west] {no} (question3);
+    \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
+    \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
+    \end{tikzpicture}
+    }
+    \caption{Two theoretical parameters generate three language types}
+    \label{fig:formal-parameters}
+\end{figure}
 
 
 
+
+\section{Deriving `non-matching'}\label{deriving non-matching}
 
 I am not going to give a whole sentence. I only talk about the internal and external element in there. I also do not talk about the nature of the deletion process.
 
+Old High German allows both internal and external to win. I propose headless relatives are derived from light-headed relatives. Internal element is relative pronoun, external element is demonstrative.
 
-
-
-
-\section{Deriving `non-matching'}
-
-Old High German allows both internal and external to win. I propose headless relatives are derived from light-headed relatives. Internal elemnt is relative pronoun, external element is demonstrative.
-
-\exg. eno	nist	thiz	thér	then	ir	suochet	zi	arslahanne	?\\
- etwa, nun; wohl; nicht wahr	nicht	sein	dieser, diese, dieses	der, die, das	der, die, das, wer, was	ihr	suchen	zu	erschlagen, töten\\
- `'
+\exg. eno nist thiz thér then ir suochet zi arslahanne?\\
+ now {not be.3\ac{sg}} \tsc{dem}.\tsc{sg}.\tsc{n}.\tsc{nom} \tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}
+ \tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{acc} 2\ac{pl}.\tsc{nom} seek.2\tsc{pl} to kill.\tsc{inf}.\ac{sg}.\tsc{dat}\\
+ `Isn't this now the one, who you seek to kill?'
 
 
 
@@ -229,9 +224,10 @@ I give an overview of Old High German relative pronouns. I only give the neuter 
 \tit{d} can also be \tit{dh} and \tit{th}, \tit{ë} and \tit{ē} can also be \tit{e} and \tit{é}.
 }
 
+
 \begin{table}[H]\label{tbl:paradigmohg}
  \center
- \caption {Relative pronouns in headless relatives in Old High German}
+ \caption {Relative pronouns in headless relatives in Old High German \pgcitealt{braune2018}{339}}
   \begin{tabular}{ccc}
   \toprule
               & \ac{n}.\ac{sg}  & \ac{m}.\ac{sg} \\
@@ -240,14 +236,11 @@ I give an overview of Old High German relative pronouns. I only give the neuter 
     \ac{acc}  & d-a-ȥ           & d-ë-n          \\
     \ac{dat}  & d-ë-mo          & d-ë-mo         \\
     \bottomrule
-         & \ac{n}.\ac{pl}       & \ac{m}.\ac{pl} \\
-          \cmidrule{2-3}
-    \ac{nom}  & d-iu            &  d-ē           \\
-    \ac{acc}  & d-iu            &  d-ē           \\
-    \ac{dat}  & d-ē-m/n         &  d-ē-m/n       \\
-    \bottomrule
   \end{tabular}
 \end{table}
+
+
+
 
 The \tit{d} morpheme corresponds to \tsc{def}.
 
@@ -374,8 +367,8 @@ There are three independent containment relations. Problem?
 
 \begin{table}[H]
   \center
-	\caption {Old High German: \ac{int} > \ac{ext}}
-		\begin{tabular}[b]{cc}
+ \caption {Old High German: \ac{int} > \ac{ext}}
+  \begin{tabular}[b]{cc}
       \toprule
       \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
       \footnotesize{
@@ -488,8 +481,8 @@ There are three independent containment relations. Problem?
 
 \begin{table}[H]
   \center
-	\caption {Old High German: \ac{int} < \ac{ext}}
-		\begin{tabular}[b]{cc}
+ \caption {Old High German: \ac{int} < \ac{ext}}
+  \begin{tabular}[b]{cc}
       \toprule
       \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
       \footnotesize{
@@ -860,8 +853,8 @@ the internal case is more complex than the external case, and the internal base 
 
 \begin{table}[H]
   \center
-	\caption {Modern German: \ac{int} > \ac{ext}}
-		\begin{tabular}[b]{cc}
+ \caption {Modern German: \ac{int} > \ac{ext}}
+  \begin{tabular}[b]{cc}
       \toprule
       \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
       \begin{forest} boom
@@ -936,8 +929,8 @@ the external case is more complex than the internal case, but the external base 
 
 \begin{table}[H]
   \center
-	\caption {Modern German: \ac{int} > \ac{ext}}
-		\begin{tabular}[b]{cc}
+ \caption {Modern German: \ac{int} > \ac{ext}}
+  \begin{tabular}[b]{cc}
       \toprule
       \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
       \begin{forest} boom
@@ -1039,6 +1032,8 @@ German & \tsc{dem}\scsub{strong}  & \cellcolor{LG}\tsc{dem}\scsub{weak} & \cellc
 \end{tabular}
 \end{table}
 
+\tit{to} is incompatible with \tit{ever}, because \tit{to} makes it accidentally uniqueness and \tit{ever} requires inherent uniqueness
+
 
 \subsection{Excluding `non-matching --- external-only'}
 
@@ -1074,32 +1069,32 @@ The relative clause is built, including the accusative relative pronoun. Now the
 
  \ex.
  \begin{forest} boom
-	 [,name=src, s sep=15mm
-			[VP
-			 		[\tit{besucht}, roof]
-			]
-		 	[,no edge, s sep=20mm
-	       [\ac{acc}P,
-				 tikz={
-				 \node[label=below:\tit{wen},
-				 draw,circle,
-				 scale=0.85,
-				 fit to=tree]{};
-				 }
-	           [\tsc{f2}]
-	           [\tsc{nomP},name=tgt
-	               [\tsc{f1}]
-	               [XP
-	                   [\phantom{xxx}, roof]
-	               ]
-	           ]
-	       ]
-				 [VP
-				 		 [\tit{Maria mag}, roof]
-				 ]
-			]
-	 ]
-	 \draw (src) to[out=south east,in=north east] (tgt);
+  [,name=src, s sep=15mm
+   [VP
+      [\tit{besucht}, roof]
+   ]
+    [,no edge, s sep=20mm
+        [\ac{acc}P,
+     tikz={
+     \node[label=below:\tit{wen},
+     draw,circle,
+     scale=0.85,
+     fit to=tree]{};
+     }
+            [\tsc{f2}]
+            [\tsc{nomP},name=tgt
+                [\tsc{f1}]
+                [XP
+                    [\phantom{xxx}, roof]
+                ]
+            ]
+        ]
+     [VP
+        [\tit{Maria mag}, roof]
+     ]
+   ]
+  ]
+  \draw (src) to[out=south east,in=north east] (tgt);
  \end{forest}\label{ex:acc-nom-grafting}
 
 The other way around does not work. Consider \ref{ex:mg-acc-nom-grafting}. This is an example with nominative as internal case and accusative as external case.
@@ -1117,22 +1112,22 @@ Now the relative clause is built first again, this time only including the nomin
          [\tit{lade ein}, roof]
      ]
          [,no edge
-    			[\tsc{nomP},
-    			tikz={
-    			\node[label=below:\tit{wer},
-    			draw,circle,
-    			scale=0.85,
-    			fit to=tree]{};
-    			}
-    					[\tsc{f1}]
-    					[XP
-    							[\phantom{xxx}, roof]
-    					]
-    			]
-    			[VP
-    					[\tit{mir sympatisch ist}, roof]
-    			]
-    	 ]
+       [\tsc{nomP},
+       tikz={
+       \node[label=below:\tit{wer},
+       draw,circle,
+       scale=0.85,
+       fit to=tree]{};
+       }
+         [\tsc{f1}]
+         [XP
+           [\phantom{xxx}, roof]
+         ]
+       ]
+       [VP
+         [\tit{mir sympatisch ist}, roof]
+       ]
+      ]
     ]
 \end{forest}\label{ex:nom-acc-grafting}
 
